Refresh plugin for June 2023